--------------------------------------------------------------------------------
MZK 2025-01-12 18:20:23-05:00 - build 6413

1. gh-802: Macro API to report VMenu alignment state. Part 1: Backend implementation.

--------------------------------------------------------------------------------
drkns 2025-01-08 18:16:52+00:00 - build 6412

1. Exception handling improvements.

2. Refactoring.

--------------------------------------------------------------------------------
drkns 2025-01-06 17:55:32+00:00 - build 6411

1. Exception handling improvements.

--------------------------------------------------------------------------------
drkns 2025-01-04 21:34:31+00:00 - build 6410

1. Improve 6409.1 and add tests.

2. Improve main thread wake-up logic.

--------------------------------------------------------------------------------
drkns 2025-01-04 16:10:43+00:00 - build 6409

1. Fix clock update in rare cases.

2. Refactoring.

--------------------------------------------------------------------------------
yjh 2024-12-28 14:05:22+03:00 - build 6408

1. Update vc_crt_fix...'es (add stub needed for NetBox)

--------------------------------------------------------------------------------
drkns 2024-12-26 18:04:08+00:00 - build 6407

1. "System properties" in Attributes dialog invoked on a device didn't work in old Windows versions.

--------------------------------------------------------------------------------
drkns 2024-12-26 11:25:55+00:00 - build 6406

1. 0004063: Directory listing when enlarging.

2. Update vc_crt_fix.

3. Minimize conversions in SQLite custom collations.

--------------------------------------------------------------------------------
drkns 2024-12-23 01:31:11+00:00 - build 6405

1. Correction of 6404.

--------------------------------------------------------------------------------
drkns 2024-12-21 23:08:36+00:00 - build 6404

1. Properly cancel operations when !?<title>?<init>! dialog is cancelled.
